--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
         (Si potrebbe fare tipo checkbox per spuntare quelle già fatte)
         -->
         <section id="ldn_thingstd">
+            <h3>Cose da fare</h3>
+            <ul>
+                <li>Visitare la Tower of London <span>&#10007;</span></li>
+                <li>Visitare Greenwich <span>&#10003;</span></li>
+                <li>Ascoltare un artista di strada a Covent Garden <span>&#10003;</span></li>
+                <li>Mangiare il tipico Fish and Chips inglese <span>&#10007;</span></li>
+
+            </ul>
 
         </section>
 
