Controllo, pulizia e  commenti

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>London trip</title>
 </head>
+
 <body>
     <!-- Intestazione -- (titolo e immagini) -->
     <header>
@@ -64,7 +65,8 @@
         <hr>
 
         <!-- Section: Cose da fare (ul + sp characters)
-        (Si potrebbe fare tipo checkbox per spuntare quelle già fatte)
+        Si potrebbe fare tipo checkbox per spuntare quelle già fatte
+        special characters code in span per poterli gestire e modificare in futuro
         -->
         <section id="ldn_thingstd">
             <h3>Cose da fare</h3>
@@ -73,7 +75,6 @@
                 <li>Visitare Greenwich <span>&#10003;</span></li>
                 <li>Ascoltare un artista di strada a Covent Garden <span>&#10003;</span></li>
                 <li>Mangiare il tipico Fish and Chips inglese <span>&#10007;</span></li>
-
             </ul>
 
         </section>
@@ -125,7 +126,7 @@
 
         <!-- Section: Gallery (immagini)
         (forse footer?)-->
-        <section id="ldn_gallery">
+        <section id="ldn_foto">
             <h3>Le foto</h3>
             <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Millenium Bridge London">
 
