--- a/index.html
+++ b/index.html
@@ -52,12 +52,15 @@
                         <td>Biglietto Aereo</td>
                         <td>120€</td>
                     </tr>
+                    
+                </tbody>
+                <tfoot>
                     <tr>
                         <td>Totale</td>
                         <td></td>
                         <td>360€</td>
                     </tr>
-                </tbody>
+                </tfoot>
             </table>
 
         </section>
